Una version nueva de hyperblog

--- a/css/estilos.css
+++ b/css/estilos.css
@@ -18,11 +18,7 @@ body
 
 #cabecera
 {
-<<<<<<< HEAD
-   background-color:crimson;
-=======
-   background-color:coral;
->>>>>>> cabecera
+   background-color:cadetblue;
 }
 
 #container h1
